# wattle-tbench-harness

./: .gitignore  README.md  analyze_wattle_tbench.py  codex_harbor_agent.py  codex_tbench_agent.py  model_config.py  pyproject.toml  run_tbench.py  run_tui_task.py  setup-codex.sh  setup.sh  wattle_harbor_agent.py  wattle_tbench_agent.py
analysis/: final_reminder_targeted_eval_2026-06-17.md  tbench_general_improvement_summary.md  tbench_raw_failure_analysis.md
design_log/: 2026-06-16-wattle-gpt55-train-fasttext-failure-analysis.md  2026-06-17-stop-hook-final-validation.md  prompt_caching_investigation.md
scripts/: analyze_task_failure.py  bootstrap_gcp_vm.sh  check_harbor_patch.py  copy_gcp_auth.sh  export_auth_env.py  generate_reports.py  incremental_tbench_analysis.py  monitor_gcp_analysis.sh  patch_harbor_agent_timeout.py  patch_harbor_upload_dir.py  sync_gcp_run.py  validate_official_submission_run.py
tests/: test_analyze_wattle_tbench.py  test_codex_harbor_agent.py  test_generate_reports.py  test_harbor_runner.py  test_tui_task_runner.py  test_wattle_harbor_agent.py
