[project]
name = "wattle-tbench-harness"
version = "0.2.0"
description = "Harbor / Terminal-Bench 2.0 harness for Wattle evaluations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "harbor>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "model_config.py",
    "codex_harbor_agent.py",
    "run_tbench.py",
    "run_tui_task.py",
    "wattle_harbor_agent.py",
    "scripts",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
